--- a/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/CMakeLists.txt
@@ -1,10 +1,9 @@
-cmake_minimum_required(VERSION 3.5.1)
+cmake_minimum_required(VERSION 2.8.12)
 project(darknet_ros)
 
 # Set c++11 cmake flags
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 set(CMAKE_C_FLAGS "-Wall -Wno-unused-result -Wno-unknown-pragmas -Wno-unused-variable -Wfatal-errors -fPIC ${CMAKE_C_FLAGS}")
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Define path of darknet folder here.
 find_path(DARKNET_PATH
@@ -23,12 +22,15 @@ if (CUDA_FOUND)
     CUDA_NVCC_FLAGS
     ${CUDA_NVCC_FLAGS};
     -O3
-    -gencode arch=compute_30,code=sm_30
-    -gencode arch=compute_35,code=sm_35
-    -gencode arch=compute_50,code=[sm_50,compute_50]
-    -gencode arch=compute_52,code=[sm_52,compute_52]
-    -gencode arch=compute_61,code=sm_61
-    -gencode arch=compute_62,code=sm_62
+#    -gencode arch=compute_30,code=sm_30  # deprecated
+#    -gencode arch=compute_35,code=sm_35  # deprecated
+#    -gencode arch=compute_50,code=[sm_50,compute_50]
+#    -gencode arch=compute_52,code=[sm_52,compute_52]
+#    -gencode arch=compute_61,code=sm_61 # GTX1080
+#    -gencode arch=compute_62,code=sm_62 # Nvidia Drive PX2, Jetson TX2 
+#    -gencode arch=compute_70,code=sm_70  # Tesla V100
+    -gencode arch=compute_75,code=sm_75  # Titan RTX
+#    -gencode arch=compute_86,code=sm_86  # RTX 3080
   )
   add_definitions(-DGPU)
 else()
@@ -83,12 +85,15 @@ catkin_package(
     Boost
 )
 
+
 include_directories(
   ${DARKNET_PATH}/src
   ${DARKNET_PATH}/include
   include
   ${Boost_INCLUDE_DIRS}
   ${catkin_INCLUDE_DIRS}
+  ${DARKNET_PATH}/3rdparty/stb/include
+  ${DARKNET_PATH}/3rdparty/pthreads
 )
 
 set(PROJECT_LIB_FILES
@@ -96,53 +101,58 @@ set(PROJECT_LIB_FILES
 )
 
 set(DARKNET_CORE_FILES
-    ${DARKNET_PATH}/src/activation_layer.c        ${DARKNET_PATH}/src/im2col.c
-    ${DARKNET_PATH}/src/activations.c             ${DARKNET_PATH}/src/image.c
-    ${DARKNET_PATH}/src/avgpool_layer.c           ${DARKNET_PATH}/src/layer.c
-    ${DARKNET_PATH}/src/batchnorm_layer.c         ${DARKNET_PATH}/src/list.c
-    ${DARKNET_PATH}/src/blas.c                    ${DARKNET_PATH}/src/local_layer.c
-    ${DARKNET_PATH}/src/box.c                     ${DARKNET_PATH}/src/lstm_layer.c
-    ${DARKNET_PATH}/src/col2im.c                  ${DARKNET_PATH}/src/matrix.c
-    ${DARKNET_PATH}/src/connected_layer.c         ${DARKNET_PATH}/src/maxpool_layer.c
-    ${DARKNET_PATH}/src/convolutional_layer.c     ${DARKNET_PATH}/src/network.c
-    ${DARKNET_PATH}/src/cost_layer.c              ${DARKNET_PATH}/src/normalization_layer.c
-    ${DARKNET_PATH}/src/crnn_layer.c              ${DARKNET_PATH}/src/option_list.c
-    ${DARKNET_PATH}/src/crop_layer.c              ${DARKNET_PATH}/src/parser.c
-    ${DARKNET_PATH}/src/cuda.c                    ${DARKNET_PATH}/src/region_layer.c
-    ${DARKNET_PATH}/src/data.c                    ${DARKNET_PATH}/src/reorg_layer.c
-    ${DARKNET_PATH}/src/deconvolutional_layer.c   ${DARKNET_PATH}/src/rnn_layer.c
-    ${DARKNET_PATH}/src/demo.c                    ${DARKNET_PATH}/src/route_layer.c
-    ${DARKNET_PATH}/src/detection_layer.c         ${DARKNET_PATH}/src/shortcut_layer.c
-    ${DARKNET_PATH}/src/dropout_layer.c           ${DARKNET_PATH}/src/softmax_layer.c
-    ${DARKNET_PATH}/src/gemm.c                    ${DARKNET_PATH}/src/tree.c
-    ${DARKNET_PATH}/src/gru_layer.c               ${DARKNET_PATH}/src/utils.c
-    ${DARKNET_PATH}/src/upsample_layer.c          ${DARKNET_PATH}/src/logistic_layer.c
-    ${DARKNET_PATH}/src/l2norm_layer.c            ${DARKNET_PATH}/src/yolo_layer.c
-    ${DARKNET_PATH}/src/iseg_layer.c              ${DARKNET_PATH}/src/image_opencv.cpp
+    ${DARKNET_PATH}/src/activation_layer.c        ${DARKNET_PATH}/src/activations.c    
+    ${DARKNET_PATH}/src/art.c                     ${DARKNET_PATH}/src/avgpool_layer.c           
+    ${DARKNET_PATH}/src/batchnorm_layer.c         ${DARKNET_PATH}/src/blas.c                    
+    ${DARKNET_PATH}/src/box.c                     ${DARKNET_PATH}/src/captcha.c                     
+    ${DARKNET_PATH}/src/cifar.c                   ${DARKNET_PATH}/src/classifier.c         
+    ${DARKNET_PATH}/src/coco.c                    ${DARKNET_PATH}/src/col2im.c                  
+    ${DARKNET_PATH}/src/compare.c                 ${DARKNET_PATH}/src/connected_layer.c
+    ${DARKNET_PATH}/src/conv_lstm_layer.c         ${DARKNET_PATH}/src/convolutional_layer.c
+    ${DARKNET_PATH}/src/cost_layer.c                           
+    ${DARKNET_PATH}/src/crnn_layer.c              ${DARKNET_PATH}/src/crop_layer.c              
+    ${DARKNET_PATH}/src/dark_cuda.c               ${DARKNET_PATH}/src/darknet.c                
+    ${DARKNET_PATH}/src/data.c                       
+    ${DARKNET_PATH}/src/demo.c                    ${DARKNET_PATH}/src/detection_layer.c         
+    ${DARKNET_PATH}/src/detector.c                ${DARKNET_PATH}/src/dice.c           
+    ${DARKNET_PATH}/src/dropout_layer.c           ${DARKNET_PATH}/src/gaussian_yolo_layer.c
+    ${DARKNET_PATH}/src/gemm.c                                       
+                                                  ${DARKNET_PATH}/src/go.c
+    ${DARKNET_PATH}/src/gru_layer.c               ${DARKNET_PATH}/src/im2col.c
+    ${DARKNET_PATH}/src/image.c                   ${DARKNET_PATH}/src/layer.c
+    ${DARKNET_PATH}/src/list.c                    ${DARKNET_PATH}/src/local_layer.c
+    ${DARKNET_PATH}/src/lstm_layer.c              ${DARKNET_PATH}/src/matrix.c
+    ${DARKNET_PATH}/src/maxpool_layer.c           ${DARKNET_PATH}/src/network.c
+    ${DARKNET_PATH}/src/nightmare.c               ${DARKNET_PATH}/src/normalization_layer.c
+    ${DARKNET_PATH}/src/option_list.c             ${DARKNET_PATH}/src/parser.c
+    ${DARKNET_PATH}/src/region_layer.c            ${DARKNET_PATH}/src/reorg_layer.c
+    ${DARKNET_PATH}/src/reorg_old_layer.c         ${DARKNET_PATH}/src/rnn.c
+    ${DARKNET_PATH}/src/rnn_layer.c               ${DARKNET_PATH}/src/rnn_vid.c
+    ${DARKNET_PATH}/src/route_layer.c             ${DARKNET_PATH}/src/sam_layer.c
+    ${DARKNET_PATH}/src/scale_channels_layer.c    ${DARKNET_PATH}/src/shortcut_layer.c
+    ${DARKNET_PATH}/src/softmax_layer.c           ${DARKNET_PATH}/src/super.c
+    ${DARKNET_PATH}/src/swag.c                    ${DARKNET_PATH}/src/tag.c
+    ${DARKNET_PATH}/src/tree.c                    ${DARKNET_PATH}/src/upsample_layer.c
+    ${DARKNET_PATH}/src/utils.c                   ${DARKNET_PATH}/src/voxel.c
+    ${DARKNET_PATH}/src/writing.c                 ${DARKNET_PATH}/src/yolo.c
+    ${DARKNET_PATH}/src/yolo_layer.c
 
-    ${DARKNET_PATH}/examples/art.c                ${DARKNET_PATH}/examples/lsd.c
-    ${DARKNET_PATH}/examples/nightmare.c          ${DARKNET_PATH}/examples/instance-segmenter.c
-    ${DARKNET_PATH}/examples/captcha.c            ${DARKNET_PATH}/examples/regressor.c
-    ${DARKNET_PATH}/examples/cifar.c              ${DARKNET_PATH}/examples/rnn.c
-    ${DARKNET_PATH}/examples/classifier.c         ${DARKNET_PATH}/examples/segmenter.c
-    ${DARKNET_PATH}/examples/coco.c               ${DARKNET_PATH}/examples/super.c
-    ${DARKNET_PATH}/examples/darknet.c            ${DARKNET_PATH}/examples/tag.c
-    ${DARKNET_PATH}/examples/detector.c           ${DARKNET_PATH}/examples/yolo.c
-    ${DARKNET_PATH}/examples/go.c
+    ${DARKNET_PATH}/src/http_stream.cpp           ${DARKNET_PATH}/src/image_opencv.cpp
 )
 
 set(DARKNET_CUDA_FILES
-    ${DARKNET_PATH}/src/activation_kernels.cu     ${DARKNET_PATH}/src/crop_layer_kernels.cu
-    ${DARKNET_PATH}/src/avgpool_layer_kernels.cu  ${DARKNET_PATH}/src/deconvolutional_kernels.cu
-    ${DARKNET_PATH}/src/blas_kernels.cu           ${DARKNET_PATH}/src/dropout_layer_kernels.cu
-    ${DARKNET_PATH}/src/col2im_kernels.cu         ${DARKNET_PATH}/src/im2col_kernels.cu
-    ${DARKNET_PATH}/src/convolutional_kernels.cu  ${DARKNET_PATH}/src/maxpool_layer_kernels.cu
+    ${DARKNET_PATH}/src/activation_kernels.cu     ${DARKNET_PATH}/src/avgpool_layer_kernels.cu
+    ${DARKNET_PATH}/src/blas_kernels.cu           ${DARKNET_PATH}/src/col2im_kernels.cu         
+    ${DARKNET_PATH}/src/convolutional_kernels.cu  ${DARKNET_PATH}/src/crop_layer_kernels.cu
+                                                  ${DARKNET_PATH}/src/dropout_layer_kernels.cu
+    ${DARKNET_PATH}/src/im2col_kernels.cu          ${DARKNET_PATH}/src/maxpool_layer_kernels.cu
+    ${DARKNET_PATH}/src/network_kernels.cu
 )
 
 if (CUDA_FOUND)
 
   link_directories(
-    ${CUDA_TOOLKIT_ROOT_DIR}/lib64
+    /usr/local/cuda/lib64
   )
 
   cuda_add_library(${PROJECT_NAME}_lib
@@ -150,11 +160,70 @@ if (CUDA_FOUND)
     ${DARKNET_CUDA_FILES}
   )
 
+  #[[cuda_add_library(${PROJECT_NAME}_lib
+    src/YoloObjectDetector.cpp
+    src/image_interface.cpp
+    ${DARKNET_PATH}/src/activation_layer.c        ${DARKNET_PATH}/src/activations.c    
+    ${DARKNET_PATH}/src/art.c                     ${DARKNET_PATH}/src/avgpool_layer.c           
+    ${DARKNET_PATH}/src/batchnorm_layer.c         ${DARKNET_PATH}/src/blas.c                    
+    ${DARKNET_PATH}/src/box.c                     ${DARKNET_PATH}/src/captcha.c                     
+    ${DARKNET_PATH}/src/cifar.c                   ${DARKNET_PATH}/src/classifier.c         
+    ${DARKNET_PATH}/src/coco.c                    ${DARKNET_PATH}/src/col2im.c                  
+    ${DARKNET_PATH}/src/compare.c                 ${DARKNET_PATH}/src/connected_layer.c
+    ${DARKNET_PATH}/src/conv_lstm_layer.c         ${DARKNET_PATH}/src/convolutional_layer.c
+    ${DARKNET_PATH}/src/cost_layer.c              #${DARKNET_PATH}/src/cpu_gemm.c              
+    ${DARKNET_PATH}/src/crnn_layer.c              ${DARKNET_PATH}/src/crop_layer.c              
+    ${DARKNET_PATH}/src/dark_cuda.c               ${DARKNET_PATH}/src/darknet.c                
+    ${DARKNET_PATH}/src/data.c                    #${DARKNET_PATH}/src/deconvolutional_layer.c   
+    ${DARKNET_PATH}/src/demo.c                    ${DARKNET_PATH}/src/detection_layer.c         
+    ${DARKNET_PATH}/src/detector.c                ${DARKNET_PATH}/src/dice.c           
+    ${DARKNET_PATH}/src/dropout_layer.c           ${DARKNET_PATH}/src/gaussian_yolo_layer.c
+    ${DARKNET_PATH}/src/gemm.c                    #${DARKNET_PATH}/src/getopt.c                    
+                                                  ${DARKNET_PATH}/src/go.c
+    ${DARKNET_PATH}/src/gru_layer.c               ${DARKNET_PATH}/src/im2col.c
+    ${DARKNET_PATH}/src/image.c                   ${DARKNET_PATH}/src/layer.c
+    ${DARKNET_PATH}/src/list.c                    ${DARKNET_PATH}/src/local_layer.c
+    ${DARKNET_PATH}/src/lstm_layer.c              ${DARKNET_PATH}/src/matrix.c
+    ${DARKNET_PATH}/src/maxpool_layer.c           ${DARKNET_PATH}/src/network.c
+    ${DARKNET_PATH}/src/nightmare.c               ${DARKNET_PATH}/src/normalization_layer.c
+    ${DARKNET_PATH}/src/option_list.c             ${DARKNET_PATH}/src/parser.c
+    ${DARKNET_PATH}/src/region_layer.c            ${DARKNET_PATH}/src/reorg_layer.c
+    ${DARKNET_PATH}/src/reorg_old_layer.c         ${DARKNET_PATH}/src/rnn.c
+    ${DARKNET_PATH}/src/rnn_layer.c               ${DARKNET_PATH}/src/rnn_vid.c
+    ${DARKNET_PATH}/src/route_layer.c             ${DARKNET_PATH}/src/sam_layer.c
+    ${DARKNET_PATH}/src/scale_channels_layer.c    ${DARKNET_PATH}/src/shortcut_layer.c
+    ${DARKNET_PATH}/src/softmax_layer.c           ${DARKNET_PATH}/src/super.c
+    ${DARKNET_PATH}/src/swag.c                    ${DARKNET_PATH}/src/tag.c
+    ${DARKNET_PATH}/src/tree.c                    ${DARKNET_PATH}/src/upsample_layer.c
+    ${DARKNET_PATH}/src/utils.c                   ${DARKNET_PATH}/src/voxel.c
+    ${DARKNET_PATH}/src/writing.c                 ${DARKNET_PATH}/src/yolo.c
+    ${DARKNET_PATH}/src/yolo_layer.c
+
+    ${DARKNET_PATH}/src/http_stream.cpp           ${DARKNET_PATH}/src/image_opencv.cpp
+#    ${DARKNET_PATH}/src/yolo_v2_class.cpp         ${DARKNET_PATH}/src/yolo_console_dll.cpp
+#${DARKNET_PATH}/src/gettimeofday.c
+
+    ${DARKNET_PATH}/src/activation_kernels.cu     ${DARKNET_PATH}/src/avgpool_layer_kernels.cu
+    ${DARKNET_PATH}/src/blas_kernels.cu           ${DARKNET_PATH}/src/col2im_kernels.cu         
+    ${DARKNET_PATH}/src/convolutional_kernels.cu  ${DARKNET_PATH}/src/crop_layer_kernels.cu
+                                                  ${DARKNET_PATH}/src/dropout_layer_kernels.cu
+    ${DARKNET_PATH}/src/im2col_kernels.cu          ${DARKNET_PATH}/src/maxpool_layer_kernels.cu
+    ${DARKNET_PATH}/src/network_kernels.cu
+#${DARKNET_PATH}/src/deconvolutional_kernels.cu
+  )]]
+
   target_link_libraries(${PROJECT_NAME}_lib
+    m
+    pthread
+    stdc++
     cuda
     cudart
     cublas
     curand
+    ${Boost_LIBRARIES}
+    ${OpenCV_LIBRARIES}
+    ${catkin_LIBRARIES}
+    ${OpenCV_LIBS}
   )
 
   cuda_add_executable(${PROJECT_NAME}
@@ -165,11 +234,67 @@ if (CUDA_FOUND)
     src/yolo_object_detector_nodelet.cpp
   )
 
-else()
 
+else()
+  
   add_library(${PROJECT_NAME}_lib
     ${PROJECT_LIB_FILES} ${DARKNET_CORE_FILES}
   )
+
+  #[[add_library(${PROJECT_NAME}_lib
+    src/YoloObjectDetector.cpp
+    src/image_interface.cpp
+
+    ${DARKNET_PATH}/src/activation_layer.c        ${DARKNET_PATH}/src/activations.c    
+    ${DARKNET_PATH}/src/art.c                     ${DARKNET_PATH}/src/avgpool_layer.c           
+    ${DARKNET_PATH}/src/batchnorm_layer.c         ${DARKNET_PATH}/src/blas.c                    
+    ${DARKNET_PATH}/src/box.c                     ${DARKNET_PATH}/src/captcha.c                     
+    ${DARKNET_PATH}/src/cifar.c                   ${DARKNET_PATH}/src/classifier.c         
+    ${DARKNET_PATH}/src/coco.c                    ${DARKNET_PATH}/src/col2im.c                  
+    ${DARKNET_PATH}/src/compare.c                 ${DARKNET_PATH}/src/connected_layer.c
+    ${DARKNET_PATH}/src/conv_lstm_layer.c         ${DARKNET_PATH}/src/convolutional_layer.c
+    ${DARKNET_PATH}/src/cost_layer.c              ${DARKNET_PATH}/src/cpu_gemm.c              
+    ${DARKNET_PATH}/src/crnn_layer.c              ${DARKNET_PATH}/src/crop_layer.c              
+    ${DARKNET_PATH}/src/dark_cuda.c               ${DARKNET_PATH}/src/darknet.c                
+    ${DARKNET_PATH}/src/data.c                    ${DARKNET_PATH}/src/deconvolutional_layer.c   
+    ${DARKNET_PATH}/src/demo.c                    ${DARKNET_PATH}/src/detection_layer.c         
+    ${DARKNET_PATH}/src/detector.c                ${DARKNET_PATH}/src/dice.c           
+    ${DARKNET_PATH}/src/dropout_layer.c           ${DARKNET_PATH}/src/gaussian_yolo_layer.c
+    ${DARKNET_PATH}/src/gemm.c                    ${DARKNET_PATH}/src/getopt.c                    
+    ${DARKNET_PATH}/src/gettimeofday.c            ${DARKNET_PATH}/src/go.c
+    ${DARKNET_PATH}/src/gru_layer.c               ${DARKNET_PATH}/src/im2col.c
+    ${DARKNET_PATH}/src/image.c                   ${DARKNET_PATH}/src/layer.c
+    ${DARKNET_PATH}/src/list.c                    ${DARKNET_PATH}/src/local_layer.c
+    ${DARKNET_PATH}/src/lstm_layer.c              ${DARKNET_PATH}/src/matrix.c
+    ${DARKNET_PATH}/src/maxpool_layer.c           ${DARKNET_PATH}/src/network.c
+    ${DARKNET_PATH}/src/nightmare.c               ${DARKNET_PATH}/src/normalization_layer.c
+    ${DARKNET_PATH}/src/option_list.c             ${DARKNET_PATH}/src/parser.c
+    ${DARKNET_PATH}/src/region_layer.c            ${DARKNET_PATH}/src/reorg_layer.c
+    ${DARKNET_PATH}/src/reorg_old_layer.c         ${DARKNET_PATH}/src/rnn.c
+    ${DARKNET_PATH}/src/rnn_layer.c               ${DARKNET_PATH}/src/rnn_vid.c
+    ${DARKNET_PATH}/src/route_layer.c             ${DARKNET_PATH}/src/sam_layer.c
+    ${DARKNET_PATH}/src/scale_channels_layer.c    ${DARKNET_PATH}/src/shortcut_layer.c
+    ${DARKNET_PATH}/src/softmax_layer.c           ${DARKNET_PATH}/src/super.c
+    ${DARKNET_PATH}/src/swag.c                    ${DARKNET_PATH}/src/tag.c
+    ${DARKNET_PATH}/src/tree.c                    ${DARKNET_PATH}/src/upsample_layer.c
+    ${DARKNET_PATH}/src/utils.c                   ${DARKNET_PATH}/src/voxel.c
+    ${DARKNET_PATH}/src/writing.c                 ${DARKNET_PATH}/src/yolo.c
+    ${DARKNET_PATH}/src/yolo_layer.c
+
+    ${DARKNET_PATH}/src/http_stream.cpp           ${DARKNET_PATH}/src/image_opencv.cpp
+    ${DARKNET_PATH}/src/yolo_v2_class.cpp         ${DARKNET_PATH}/src/yolo_console_dll.cpp
+
+  )
+
+  target_link_libraries(${PROJECT_NAME}_lib
+    m
+    pthread
+    stdc++
+    ${Boost_LIBRARIES}
+    ${OpenCV_LIBRARIES}
+    ${catkin_LIBRARIES}
+    ${OpenCV_LIBS}
+  )]]
 
   add_executable(${PROJECT_NAME}
     src/yolo_object_detector_node.cpp
@@ -219,17 +344,13 @@ install(
   FILES_MATCHING PATTERN "*.h"
 )
 
-install(DIRECTORY config launch yolo_network_config
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
-
 # Download yolov2-tiny.weights
 set(PATH "${CMAKE_CURRENT_SOURCE_DIR}/yolo_network_config/weights")
 set(FILE "${PATH}/yolov2-tiny.weights")
 message(STATUS "Checking and downloading yolov2-tiny.weights if needed ...")
 if (NOT EXISTS "${FILE}")
   message(STATUS "... file does not exist. Downloading now ...")
-  execute_process(COMMAND wget -q https://github.com/leggedrobotics/darknet_ros/releases/download/1.1.4/yolov2-tiny.weights -P ${PATH})
+  execute_process(COMMAND wget http://pjreddie.com/media/files/yolov2-tiny.weights -P ${PATH})
 endif()
 
 # Download yolov3.weights
@@ -237,7 +358,7 @@ set(FILE "${PATH}/yolov3.weights")
 message(STATUS "Checking and downloading yolov3.weights if needed ...")
 if (NOT EXISTS "${FILE}")
   message(STATUS "... file does not exist. Downloading now ...")
-  execute_process(COMMAND wget -q https://github.com/leggedrobotics/darknet_ros/releases/download/1.1.4/yolov3.weights -P ${PATH})
+  execute_process(COMMAND wget http://pjreddie.com/media/files/yolov3.weights -P ${PATH})
 endif()
 
 #############
@@ -251,7 +372,7 @@ if(CATKIN_ENABLE_TESTING)
   message(STATUS "Checking and downloading yolov2.weights if needed ...")
   if (NOT EXISTS "${FILE}")
     message(STATUS "... file does not exist. Downloading now ...")
-    execute_process(COMMAND wget -q https://github.com/leggedrobotics/darknet_ros/releases/download/1.1.4/yolov2.weights -P ${PATH})
+    execute_process(COMMAND wget http://pjreddie.com/media/files/yolov2.weights -P ${PATH})
   endif()
 
   find_package(rostest REQUIRED)
