--- a/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/CMakeLists.txt
@@ -152,78 +152,30 @@ set(DARKNET_CUDA_FILES
 if (CUDA_FOUND)
 
   link_directories(
-    /usr/local/cuda/lib64
+    ${CUDA_TOOLKIT_ROOT_DIR}/lib64
   )
+
+  #link_directories(
+  #  /usr/local/cuda/lib64
+  #)
 
   cuda_add_library(${PROJECT_NAME}_lib
     ${PROJECT_LIB_FILES} ${DARKNET_CORE_FILES}
     ${DARKNET_CUDA_FILES}
   )
 
-  #[[cuda_add_library(${PROJECT_NAME}_lib
-    src/YoloObjectDetector.cpp
-    src/image_interface.cpp
-    ${DARKNET_PATH}/src/activation_layer.c        ${DARKNET_PATH}/src/activations.c    
-    ${DARKNET_PATH}/src/art.c                     ${DARKNET_PATH}/src/avgpool_layer.c           
-    ${DARKNET_PATH}/src/batchnorm_layer.c         ${DARKNET_PATH}/src/blas.c                    
-    ${DARKNET_PATH}/src/box.c                     ${DARKNET_PATH}/src/captcha.c                     
-    ${DARKNET_PATH}/src/cifar.c                   ${DARKNET_PATH}/src/classifier.c         
-    ${DARKNET_PATH}/src/coco.c                    ${DARKNET_PATH}/src/col2im.c                  
-    ${DARKNET_PATH}/src/compare.c                 ${DARKNET_PATH}/src/connected_layer.c
-    ${DARKNET_PATH}/src/conv_lstm_layer.c         ${DARKNET_PATH}/src/convolutional_layer.c
-    ${DARKNET_PATH}/src/cost_layer.c              #${DARKNET_PATH}/src/cpu_gemm.c              
-    ${DARKNET_PATH}/src/crnn_layer.c              ${DARKNET_PATH}/src/crop_layer.c              
-    ${DARKNET_PATH}/src/dark_cuda.c               ${DARKNET_PATH}/src/darknet.c                
-    ${DARKNET_PATH}/src/data.c                    #${DARKNET_PATH}/src/deconvolutional_layer.c   
-    ${DARKNET_PATH}/src/demo.c                    ${DARKNET_PATH}/src/detection_layer.c         
-    ${DARKNET_PATH}/src/detector.c                ${DARKNET_PATH}/src/dice.c           
-    ${DARKNET_PATH}/src/dropout_layer.c           ${DARKNET_PATH}/src/gaussian_yolo_layer.c
-    ${DARKNET_PATH}/src/gemm.c                    #${DARKNET_PATH}/src/getopt.c                    
-                                                  ${DARKNET_PATH}/src/go.c
-    ${DARKNET_PATH}/src/gru_layer.c               ${DARKNET_PATH}/src/im2col.c
-    ${DARKNET_PATH}/src/image.c                   ${DARKNET_PATH}/src/layer.c
-    ${DARKNET_PATH}/src/list.c                    ${DARKNET_PATH}/src/local_layer.c
-    ${DARKNET_PATH}/src/lstm_layer.c              ${DARKNET_PATH}/src/matrix.c
-    ${DARKNET_PATH}/src/maxpool_layer.c           ${DARKNET_PATH}/src/network.c
-    ${DARKNET_PATH}/src/nightmare.c               ${DARKNET_PATH}/src/normalization_layer.c
-    ${DARKNET_PATH}/src/option_list.c             ${DARKNET_PATH}/src/parser.c
-    ${DARKNET_PATH}/src/region_layer.c            ${DARKNET_PATH}/src/reorg_layer.c
-    ${DARKNET_PATH}/src/reorg_old_layer.c         ${DARKNET_PATH}/src/rnn.c
-    ${DARKNET_PATH}/src/rnn_layer.c               ${DARKNET_PATH}/src/rnn_vid.c
-    ${DARKNET_PATH}/src/route_layer.c             ${DARKNET_PATH}/src/sam_layer.c
-    ${DARKNET_PATH}/src/scale_channels_layer.c    ${DARKNET_PATH}/src/shortcut_layer.c
-    ${DARKNET_PATH}/src/softmax_layer.c           ${DARKNET_PATH}/src/super.c
-    ${DARKNET_PATH}/src/swag.c                    ${DARKNET_PATH}/src/tag.c
-    ${DARKNET_PATH}/src/tree.c                    ${DARKNET_PATH}/src/upsample_layer.c
-    ${DARKNET_PATH}/src/utils.c                   ${DARKNET_PATH}/src/voxel.c
-    ${DARKNET_PATH}/src/writing.c                 ${DARKNET_PATH}/src/yolo.c
-    ${DARKNET_PATH}/src/yolo_layer.c
-
-    ${DARKNET_PATH}/src/http_stream.cpp           ${DARKNET_PATH}/src/image_opencv.cpp
-#    ${DARKNET_PATH}/src/yolo_v2_class.cpp         ${DARKNET_PATH}/src/yolo_console_dll.cpp
-#${DARKNET_PATH}/src/gettimeofday.c
-
-    ${DARKNET_PATH}/src/activation_kernels.cu     ${DARKNET_PATH}/src/avgpool_layer_kernels.cu
-    ${DARKNET_PATH}/src/blas_kernels.cu           ${DARKNET_PATH}/src/col2im_kernels.cu         
-    ${DARKNET_PATH}/src/convolutional_kernels.cu  ${DARKNET_PATH}/src/crop_layer_kernels.cu
-                                                  ${DARKNET_PATH}/src/dropout_layer_kernels.cu
-    ${DARKNET_PATH}/src/im2col_kernels.cu          ${DARKNET_PATH}/src/maxpool_layer_kernels.cu
-    ${DARKNET_PATH}/src/network_kernels.cu
-#${DARKNET_PATH}/src/deconvolutional_kernels.cu
-  )]]
-
   target_link_libraries(${PROJECT_NAME}_lib
-    m
-    pthread
-    stdc++
+    #m
+    #pthread
+    #stdc++
     cuda
     cudart
     cublas
     curand
-    ${Boost_LIBRARIES}
-    ${OpenCV_LIBRARIES}
-    ${catkin_LIBRARIES}
-    ${OpenCV_LIBS}
+    #${Boost_LIBRARIES}
+    #${OpenCV_LIBRARIES}
+    #${catkin_LIBRARIES}
+    #${OpenCV_LIBS}
   )
 
   cuda_add_executable(${PROJECT_NAME}
@@ -240,61 +192,6 @@ else()
   add_library(${PROJECT_NAME}_lib
     ${PROJECT_LIB_FILES} ${DARKNET_CORE_FILES}
   )
-
-  #[[add_library(${PROJECT_NAME}_lib
-    src/YoloObjectDetector.cpp
-    src/image_interface.cpp
-
-    ${DARKNET_PATH}/src/activation_layer.c        ${DARKNET_PATH}/src/activations.c    
-    ${DARKNET_PATH}/src/art.c                     ${DARKNET_PATH}/src/avgpool_layer.c           
-    ${DARKNET_PATH}/src/batchnorm_layer.c         ${DARKNET_PATH}/src/blas.c                    
-    ${DARKNET_PATH}/src/box.c                     ${DARKNET_PATH}/src/captcha.c                     
-    ${DARKNET_PATH}/src/cifar.c                   ${DARKNET_PATH}/src/classifier.c         
-    ${DARKNET_PATH}/src/coco.c                    ${DARKNET_PATH}/src/col2im.c                  
-    ${DARKNET_PATH}/src/compare.c                 ${DARKNET_PATH}/src/connected_layer.c
-    ${DARKNET_PATH}/src/conv_lstm_layer.c         ${DARKNET_PATH}/src/convolutional_layer.c
-    ${DARKNET_PATH}/src/cost_layer.c              ${DARKNET_PATH}/src/cpu_gemm.c              
-    ${DARKNET_PATH}/src/crnn_layer.c              ${DARKNET_PATH}/src/crop_layer.c              
-    ${DARKNET_PATH}/src/dark_cuda.c               ${DARKNET_PATH}/src/darknet.c                
-    ${DARKNET_PATH}/src/data.c                    ${DARKNET_PATH}/src/deconvolutional_layer.c   
-    ${DARKNET_PATH}/src/demo.c                    ${DARKNET_PATH}/src/detection_layer.c         
-    ${DARKNET_PATH}/src/detector.c                ${DARKNET_PATH}/src/dice.c           
-    ${DARKNET_PATH}/src/dropout_layer.c           ${DARKNET_PATH}/src/gaussian_yolo_layer.c
-    ${DARKNET_PATH}/src/gemm.c                    ${DARKNET_PATH}/src/getopt.c                    
-    ${DARKNET_PATH}/src/gettimeofday.c            ${DARKNET_PATH}/src/go.c
-    ${DARKNET_PATH}/src/gru_layer.c               ${DARKNET_PATH}/src/im2col.c
-    ${DARKNET_PATH}/src/image.c                   ${DARKNET_PATH}/src/layer.c
-    ${DARKNET_PATH}/src/list.c                    ${DARKNET_PATH}/src/local_layer.c
-    ${DARKNET_PATH}/src/lstm_layer.c              ${DARKNET_PATH}/src/matrix.c
-    ${DARKNET_PATH}/src/maxpool_layer.c           ${DARKNET_PATH}/src/network.c
-    ${DARKNET_PATH}/src/nightmare.c               ${DARKNET_PATH}/src/normalization_layer.c
-    ${DARKNET_PATH}/src/option_list.c             ${DARKNET_PATH}/src/parser.c
-    ${DARKNET_PATH}/src/region_layer.c            ${DARKNET_PATH}/src/reorg_layer.c
-    ${DARKNET_PATH}/src/reorg_old_layer.c         ${DARKNET_PATH}/src/rnn.c
-    ${DARKNET_PATH}/src/rnn_layer.c               ${DARKNET_PATH}/src/rnn_vid.c
-    ${DARKNET_PATH}/src/route_layer.c             ${DARKNET_PATH}/src/sam_layer.c
-    ${DARKNET_PATH}/src/scale_channels_layer.c    ${DARKNET_PATH}/src/shortcut_layer.c
-    ${DARKNET_PATH}/src/softmax_layer.c           ${DARKNET_PATH}/src/super.c
-    ${DARKNET_PATH}/src/swag.c                    ${DARKNET_PATH}/src/tag.c
-    ${DARKNET_PATH}/src/tree.c                    ${DARKNET_PATH}/src/upsample_layer.c
-    ${DARKNET_PATH}/src/utils.c                   ${DARKNET_PATH}/src/voxel.c
-    ${DARKNET_PATH}/src/writing.c                 ${DARKNET_PATH}/src/yolo.c
-    ${DARKNET_PATH}/src/yolo_layer.c
-
-    ${DARKNET_PATH}/src/http_stream.cpp           ${DARKNET_PATH}/src/image_opencv.cpp
-    ${DARKNET_PATH}/src/yolo_v2_class.cpp         ${DARKNET_PATH}/src/yolo_console_dll.cpp
-
-  )
-
-  target_link_libraries(${PROJECT_NAME}_lib
-    m
-    pthread
-    stdc++
-    ${Boost_LIBRARIES}
-    ${OpenCV_LIBRARIES}
-    ${catkin_LIBRARIES}
-    ${OpenCV_LIBS}
-  )]]
 
   add_executable(${PROJECT_NAME}
     src/yolo_object_detector_node.cpp
@@ -361,18 +258,34 @@ if (NOT EXISTS "${FILE}")
   execute_process(COMMAND wget http://pjreddie.com/media/files/yolov3.weights -P ${PATH})
 endif()
 
+# Download yolov4.weights
+set(FILE "${PATH}/yolov4.weights")
+message(STATUS "Checking and downloading yolov4.weights if needed ...")
+if (NOT EXISTS "${FILE}")
+  message(STATUS "... file does not exist. Downloading now ...")
+  execute_process(COMMAND wget https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.weights -P ${PATH})
+endif()
+
 #############
 ## Testing ##
 #############
 
 if(CATKIN_ENABLE_TESTING)
-  # Download yolov2.weights
+  #[[# Download yolov2.weights
   set(PATH "${CMAKE_CURRENT_SOURCE_DIR}/yolo_network_config/weights")
   set(FILE "${PATH}/yolov2.weights")
   message(STATUS "Checking and downloading yolov2.weights if needed ...")
   if (NOT EXISTS "${FILE}")
     message(STATUS "... file does not exist. Downloading now ...")
     execute_process(COMMAND wget http://pjreddie.com/media/files/yolov2.weights -P ${PATH})
+  endif()]]
+
+  # Download yolov4.weights
+  set(FILE "${PATH}/yolov4.weights")
+  message(STATUS "Checking and downloading yolov4.weights if needed ...")
+  if (NOT EXISTS "${FILE}")
+    message(STATUS "... file does not exist. Downloading now ...")
+    execute_process(COMMAND wget https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.weights -P ${PATH})
   endif()
 
   find_package(rostest REQUIRED)
